@@ -15,3 +15,10 @@ CHANGELOG: 1-11-2011
 1) Added changelog file
 2) removed -speaker versions from repo
 3) removed -speaker compile options from the domake script
+
+CHANGELOG: 02-11-2011
+1) adding new script called 'er9x-builder.sh' to root folder.
+   script cleans up the compile process of all the versions
+   and should be easier to extend in the future.
+   all 'compile' output ends up in the buildlog folder
+   and is only shown if the compile failed.
